--- a/backend/package.json
+++ b/backend/package.json
@@ -11,17 +11,18 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.1.1",
     "camelcase-keys": "^7.0.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/camelcase-keys": "^5.1.1",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
@@ -29,6 +30,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/pg": "^8.10.1",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.4"
   }
 }
