--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/react-router-dom": "^5.3.3",
+    "@types/swiper": "^5.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dotenv": "^0.1.3",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "swiper": "^11.1.15",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
