--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express-validator": "^2.20.33",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.1",
     "camelcase-keys": "^7.0.2",
@@ -17,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.11.0",
     "ts-node": "^10.9.2"
