--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/axios": "^0.9.36",
     "@types/jest": "^27.5.2",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^16.18.119",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/react-router-dom": "^5.3.3",
     "@types/swiper": "^5.4.3",
     "axios": "^1.7.7",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dotenv": "^0.1.3",
