--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,20 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/axios": "^0.9.36",
+    "@types/date-fns": "^2.5.3",
     "@types/jest": "^27.5.2",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^16.18.119",
     "@types/react": "^18.3.12",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.3.1",
     "@types/react-router-dom": "^5.3.3",
     "@types/swiper": "^5.4.3",
     "axios": "^1.7.7",
+    "date": "^2.0.5",
+    "date-fns": "^4.1.0",
+    "fns": "^1.0.0",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-dotenv": "^0.1.3",
     "react-infinite-scroll-component": "^6.1.0",
